<resources>
    <string name="app_name">floral lace</string>
    <string name="bonus_up">Ура,</string>
    <string name="collect_bonus">Накопить потратить</string>
    <string name="bonus_forbuy">бонусы за покупку</string>
    <string name="reg_product">К оформлению</string>
    <string name="name_cart">Корзина</string>
    <string name="sum_end">0</string>
    <string name="name_currency">₽</string>
    <string name="name_sum_end">Итого:</string>
    <string name="favourite">Избранное</string>
    <!--todo посмотреть plurals-->
    <plurals name="number_of">
        <item quantity="one">штука</item>
        <item quantity="two">штуки</item>

    </plurals>
    <string name="name_profile">Профиль</string>
    <string name="you_have">У вас</string>
    <string name="name_bonus">бонусов</string>
    <string name="my_data">Мои данные</string>
    <string name="name_about_app">О приложение</string>
    <string name="count_bonus">0</string>
    <string name="name_bonus_down">бонусы!</string>
    <string name="no_products">Нет товаров</string>
    <string name="network_error">Ошибка соединения</string>
    <string name="name_count_last">осталось</string>
    <string name="name_counts">штук</string>
    <string name="no_product">Такого товара не существует</string>
    <string name="count_start_name">1 шт от</string>
    <string name="name_last">осталось</string>
    <string name="name_counts_easy">шт</string>
    <string name="order_making">Оформление заказа</string>
    <string name="name_add">Добавить</string>
    <string name="type_of_shoping">Самовывоз</string>
    <string name="name_of_day">Сегодня</string>
    <string name="type_of_shoping_cur">Курьер</string>
    <string name="name_reciever">Получатель</string>
    <string name="comma">,</string>
    <string name="name_time">Заберу через:</string>
    <string name="name_make_order">Оформить!</string>
    <string name="order">Заказ</string>
    <string name="name_auth">Авторизация</string>
    <string name="name_phone_numb">Введите номер телефона</string>
    <string name="name_pas">Введите пароль</string>
    <string name="name_sec_name">Введите вашу фамилию</string>
    <string name="name_fir">Введите ваше имя</string>
    <string name="name_login">Войти</string>
    <string name="name_regIn">Зарегистрироваться</string>
    <string name="name_reg">Регистрация</string>
    <string name="pas_contains_eight">Содержит более 8 символов</string>
    <string name="contain_caps_letter">Содержит прописную букву</string>
    <string name="contain_two_let">Содержит не менее двух букв</string>
    <string name="format_phone">Формат: 8800553535</string>
    <string name="name_exit_from_profile">Выйти из профиля</string>
</resources>